Leave out config details.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 *.settings/
 *.buildpath
 *.idea/
+
+# Don't include the config details, please see readme. If not in readme, grab a pitchfork.
+handlers/config.php
