Remove about page.

--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-#No directory listing
+# No directory listing
 <Files ".htaccess">
     Order allow,deny
     Deny from all
@@ -7,8 +7,10 @@
 Options -Indexes
 
 RewriteEngine on
-RewriteRule ^resume$ Errol_Markland_Resume.pdf [NC] # /resume --> straight to pdf
 
-# remove file ending (/index.php -> /index)
+# /resume --> straight to pdf
+RewriteRule ^resume$ Errol_Markland_Resume.pdf [NC]
+
+# Remove file ending (/index.php -> /index)
 RewriteRule ^([a-zA-Z]+)$ $1.php [NC]
 RewriteRule ^handlers/([a-zA-Z]+)$ $1.php [NC]
