--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,20 @@ services:
     build: .
     ports:
       - "80:80"
-    links:
-      - memcached
+    networks:
+      - site_network
     environment:
       - MEMCACHED_IP=memcached
       - MEMCACHED_PORT=11211
+    depends_on:
+      - memcached
   memcached:
     image: memcached:alpine
     expose:
       - "11211"
+    networks:
+      - site_network
+
+networks:
+    site_network:
+      driver: bridge
